--- a/HW8/FrontEnd/src/app/search-form/search-form.component.html
+++ b/HW8/FrontEnd/src/app/search-form/search-form.component.html
@@ -46,7 +46,7 @@
                 <label class="col-sm-2 col-form-label"></label>
                 <label class="col-sm-2 col-form-label">Auto-detect location<span class="star">*</span></label>
                 <span class="col-sm-2 col-form-label"><input type="checkbox" id="currentLocation" name="currentLocation"
-                                                             [(ngModel)]="this.service.searchForm.currentLocation">Current location</span>
+                                                             [(ngModel)]="this.service.searchForm.currentLocation" (click)="this.service.reset($event)">Current location</span>
             </div>
             <div class="form-group row" style="margin: 10px 0 20px 0">
                 <label class="col-sm-2 col-form-label"></label>
