--- a/HW8/FrontEnd/src/app/weather-chart/weather-chart.component.html
+++ b/HW8/FrontEnd/src/app/weather-chart/weather-chart.component.html
@@ -1,23 +1,23 @@
 <div class="table-responsive">
-    <table class="table">
+    <table class="table table-hover">
         <thead>
         <tr>
-            <th scope="col" class="col-sm-1">#</th>
-            <th scope="col" class="col-sm-3">Date</th>
-            <th scope="col" class="col-sm-2">Status</th>
-            <th scope="col" class="col-sm-2">Temp.High(°F)</th>
-            <th scope="col" class="col-sm-2">Temp.Low(°F)</th>
-            <th scope="col" class="col-sm-2">Wind Speed(mph)</th>
+            <th scope="col" class="col-1">#</th>
+            <th scope="col" class="col-3">Date</th>
+            <th scope="col" class="col-2">Status</th>
+            <th scope="col" class="col-2">Temp.High(°F)</th>
+            <th scope="col" class="col-2">Temp.Low(°F)</th>
+            <th scope="col" class="col-2">Wind Speed(mph)</th>
         </tr>
         </thead>
         <tbody>
         <tr *ngFor="let i of [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14]" (click)="this.service.showDetail(i)">
-            <th scope="row">{{i}}</th>
-            <td class="btn-link">{{this.service.getDate(i)}}</td>
-            <td><img class="img-responsive" src="{{this.service.getImage(i)}}" alt="weather" style="width: 30px; height: 30px; padding-bottom: 4px;">{{this.service.getStatus(i)}}</td>
-            <td>{{this.service.getTempHigh(i)}}</td>
-            <td>{{this.service.getTempLow(i)}}</td>
-            <td>{{this.service.getWindSpeed(i)}}</td>
+            <th scope="row" style="vertical-align: middle;">{{i + 1}}</th>
+            <td class="btn-link" style="vertical-align: middle;">{{this.service.getDate(i)}}</td>
+            <td style="vertical-align: middle;"><img class="img-responsive" src="{{this.service.getImage(i)}}" alt="weather" style="width: 35px; height: 35px; padding-bottom: 4px;">{{this.service.getStatus(i)}}</td>
+            <td style="vertical-align: middle;">{{this.service.getTempHigh(i)}}</td>
+            <td style="vertical-align: middle;">{{this.service.getTempLow(i)}}</td>
+            <td style="vertical-align: middle;">{{this.service.getWindSpeed(i)}}</td>
         </tr>
         </tbody>
     </table>
