--- a/HW8/FrontEnd/src/app/meteogram-chart/meteogram-chart.component.html
+++ b/HW8/FrontEnd/src/app/meteogram-chart/meteogram-chart.component.html
@@ -1,3 +1,3 @@
 <figure class="highcharts-figure" style="margin-top: 20px;">
-    <div id="container"></div>
+    <div id="meteogram-container"></div>
 </figure>
