--- a/HW8/FrontEnd/src/app/search-form/search-form.component.html
+++ b/HW8/FrontEnd/src/app/search-form/search-form.component.html
@@ -50,11 +50,11 @@
             </div>
             <div class="form-group row" style="margin: 10px 0 20px 0">
                 <label class="col-sm-2 col-form-label"></label>
-                <label class="col-sm-4 col-form-label">
+                <label class="col-sm-10 col-form-label">
                     <button type="submit" class="btn btn-primary" [disabled]="!this.service.searchForm.currentLocation && this.service.checkForm()">
                         <span class="material-icons">search</span><span class="submit">Search</span>
                     </button>
-                    <button id="clear" type="reset" class="btn btn-default" (click)="this.service.clearForm()" style="margin-left: 10px">
+                    <button id="clear" type="reset" class="btn btn-outline-dark" (click)="this.service.clearForm()" style="margin-left: 10px">
                         <span class="material-icons" style="transform: rotateY(180deg);">clear_all</span><span class="clear">Clear</span>
                     </button>
                 </label>
