--- a/HW8/FrontEnd/src/app/search-result/search-result.component.html
+++ b/HW8/FrontEnd/src/app/search-result/search-result.component.html
@@ -38,7 +38,7 @@
                     <span class="material-icons" style="color:#fdd94b;" *ngIf="this.service.checkFavorite()">star</span>
                 </button>
                 <button class="btn btn-default" style="padding-top: 4px; color: #aaaeb3; vertical-align: middle;"
-                        (click)="this.service.showDetail(0, 0)">
+                        (click)="this.service.showDetail(0)">
                     <span>Details ></span>
                 </button>
             </div>
