--- a/WeatherApp/app/src/main/res/layout/fragment_favorites.xml
+++ b/WeatherApp/app/src/main/res/layout/fragment_favorites.xml
@@ -35,7 +35,7 @@
                     android:id="@+id/weatherIcon"
                     android:layout_width="90dp"
                     android:layout_height="90dp"
-                    android:layout_marginStart="80dp"
+                    android:layout_marginStart="60dp"
                     android:src="@drawable/ic_clear_day"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -48,29 +48,23 @@
                     android:layout_height="45dp"
                     android:layout_marginStart="12dp"
                     android:layout_marginTop="40dp"
-                    android:layout_marginEnd="12dp"
                     android:text="60°F"
                     android:textAlignment="viewStart"
                     android:textColor="#FFFFFF"
                     android:textSize="34sp"
                     android:textStyle="bold"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.114"
                     app:layout_constraintStart_toEndOf="@+id/weatherIcon"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
-                    android:id="@+id/weatherDes"
+                    android:id="@+id/weather_des"
                     android:layout_width="170dp"
                     android:layout_height="45dp"
                     android:layout_marginStart="12dp"
-                    android:layout_marginEnd="12dp"
-                    android:text="Sunny"
+                    android:text="Partly Cloudy"
                     android:textAlignment="viewStart"
                     android:textColor="#9D9D9D"
-                    android:textSize="30sp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.114"
+                    android:textSize="28sp"
                     app:layout_constraintStart_toEndOf="@+id/weatherIcon"
                     app:layout_constraintTop_toBottomOf="@+id/temperature" />
 
@@ -127,14 +121,14 @@
                         android:layout_height="wrap_content" />
 
                     <ImageView
-                        android:id="@+id/humidityIcon"
+                        android:id="@+id/humidity_icon"
                         android:layout_width="60dp"
                         android:layout_height="60dp"
                         android:layout_gravity="center"
                         android:src="@mipmap/water_percent" />
 
                     <TextView
-                        android:id="@+id/humidityText"
+                        android:id="@+id/humidity_text"
                         android:layout_width="match_parent"
                         android:layout_height="38dp"
                         android:layout_gravity="center"
@@ -167,14 +161,14 @@
                         android:layout_height="wrap_content" />
 
                     <ImageView
-                        android:id="@+id/windIcon"
+                        android:id="@+id/wind_icon"
                         android:layout_width="60dp"
                         android:layout_height="60dp"
                         android:layout_gravity="center"
                         android:src="@mipmap/weather_windy" />
 
                     <TextView
-                        android:id="@+id/windText"
+                        android:id="@+id/wind_text"
                         android:layout_width="match_parent"
                         android:layout_height="38dp"
                         android:layout_gravity="center"
@@ -185,7 +179,7 @@
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/windSpeed"
+                        android:id="@+id/wind"
                         android:layout_width="match_parent"
                         android:layout_height="33dp"
                         android:text="Wind Speed"
@@ -206,14 +200,14 @@
                         android:layout_height="wrap_content" />
 
                     <ImageView
-                        android:id="@+id/visibilityIcon"
+                        android:id="@+id/visibility_icon"
                         android:layout_width="60dp"
                         android:layout_height="60dp"
                         android:layout_gravity="center"
                         android:src="@mipmap/eye_outline" />
 
                     <TextView
-                        android:id="@+id/visibilityText"
+                        android:id="@+id/visibility_text"
                         android:layout_width="match_parent"
                         android:layout_height="38dp"
                         android:layout_gravity="center"
@@ -244,14 +238,14 @@
                         android:layout_height="wrap_content" />
 
                     <ImageView
-                        android:id="@+id/pressureIcon"
+                        android:id="@+id/pressure_icon"
                         android:layout_width="60dp"
                         android:layout_height="60dp"
                         android:layout_gravity="center"
                         android:src="@mipmap/gauge" />
 
                     <TextView
-                        android:id="@+id/preesureText"
+                        android:id="@+id/preesure_text"
                         android:layout_width="match_parent"
                         android:layout_height="38dp"
                         android:layout_gravity="center"
@@ -292,8 +286,8 @@
                 android:layout_height="match_parent"
                 tools:ignore="SpeakableTextPresentCheck">
 
-                <com.example.weatherapp.MyListView
-                    android:id="@+id/weekList"
+                <com.example.weatherapp.view.MyListView
+                    android:id="@+id/week_list"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="#1E1E1E"
