--- a/WeatherApp/app/src/main/res/layout/activity_searchable.xml
+++ b/WeatherApp/app/src/main/res/layout/activity_searchable.xml
@@ -7,22 +7,11 @@
     android:background="#000000"
     tools:context=".SearchableActivity">
 
-    <TextView
-        android:id="@+id/search_result_des"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingStart="15dp"
-        android:textColor="#9D9D9D"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/progress_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:layout_editor_absoluteY="32dp">
+        tools:layout_editor_absoluteY="40dp">
 
         <ProgressBar
             android:id="@+id/progress"
@@ -52,11 +41,23 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <TextView
+        android:id="@+id/search_result_des"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:paddingStart="15dp"
+        android:paddingTop="6dp"
+        android:textColor="#9D9D9D"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <FrameLayout
         android:id="@+id/search_result"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="40dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/search_result_des">
 
