--- a/WeatherApp/app/src/main/res/layout/fragment_favorites.xml
+++ b/WeatherApp/app/src/main/res/layout/fragment_favorites.xml
@@ -12,6 +12,19 @@
         android:layout_height="match_parent"
         android:clickable="false">
 
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/add_favorite"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="12dp"
+            android:layout_marginBottom="12dp"
+            android:backgroundTint="#FFFFFF"
+            android:clickable="true"
+            android:src="@mipmap/map_marker_plus"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
+
         <androidx.cardview.widget.CardView
             android:id="@+id/OverallInfo"
             android:layout_width="0dp"
@@ -269,6 +282,7 @@
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
+            android:id="@+id/cardView2"
             android:layout_width="0dp"
             android:layout_height="260dp"
             android:layout_marginStart="12dp"
@@ -297,4 +311,5 @@
         </androidx.cardview.widget.CardView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 </FrameLayout>
