complete all basic function

--- a/WeatherApp/app/src/main/res/layout/fragment_favorites.xml
+++ b/WeatherApp/app/src/main/res/layout/fragment_favorites.xml
@@ -26,7 +26,7 @@
             tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/OverallInfo"
+            android:id="@+id/overall_info"
             android:layout_width="0dp"
             android:layout_height="200dp"
             android:layout_marginStart="12dp"
@@ -115,7 +115,7 @@
             app:cardCornerRadius="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/OverallInfo">
+            app:layout_constraintTop_toBottomOf="@+id/overall_info">
 
             <LinearLayout
                 android:layout_width="match_parent"
